--- a/src/main/resources/templates/reservation-check.mustache
+++ b/src/main/resources/templates/reservation-check.mustache
@@ -1,6 +1,6 @@
 {{>layout/header}}
 <form method="GET" action="/reservation-check-02">
     <input type="text" id="phoneNumber" name="phoneNumber" placeholder="핸드폰 번호를 입력하세요">
-    <input type="submit" value="예매 확">
+    <input type="submit" value="예매 확인">
 </form>
 {{>layout/footer}}
